# telegram-webapp

./: index.html  main.py  pyproject.toml  requirements.txt  ws_chat.html
telegram_bar/: __init__.py  main.py  message.py  transport.py  user.py  world.py
tests/: conftest.py  test_world.py
