[tool.poetry]
name = "telegram-webapp"
version = "0.1.0"
description = ""
authors = ["Tetenkov Alexander <forthe@ya.ru>"]

[tool.poetry.dependencies]
python = "3.10"
fastapi = "^0.85.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
