[tool.poetry]
name = "telegram_bar"
version = "0.1.0"
description = ""
authors = ["Tetenkov Alexander <forthe@ya.ru>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = [
  "."
]